@@ -46,9 +46,12 @@ endif
                         
 EXTRA_DIST = \
 	$(man_MANS) \
-	$(man_nopam) \
 	id.1 \
 	logoutd.8
+
+if USE_PAM
+EXTRA_DIST += $(man_nopam)
+endif
 
 include ../generate_translations.mak
 
