@@ -53,8 +53,11 @@ man_MANS += $(man_nopam)
 endif
 
 EXTRA_DIST = \
-	$(man_MANS) \
-	$(man_nopam)
+	$(man_MANS)
+
+if USE_PAM
+EXTRA_DIST += $(man_nopam)
+endif
 
 include ../generate_translations.mak
 
